<resources>
    <string name="app_name">Mytools</string>
    <string name="home">Home</string>
    <string name="monitor">Monitor</string>
    <string name="about">About</string>
    <string name="programs">Programs</string>
    <string name="processes">Processes</string>
    <string name="network">Network</string>
    <string name="terminal">Terminal</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_desc">Uninstall application to free-up storage</string>
    <string name="cleardata">Clear data</string>
    <string name="cleardata_desc">Clear data  to free-up storage</string>
    <string name="freeze">Freeze</string>
    <string name="freeze_desc">It\'s like uninstall, but all data will be kept</string>
</resources>